<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    ```
    <fragment
        android:id="@+id/nav_home"
        android:name="com.rudra.shiftmanagement.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_shift_list"
            app:destination="@id/nav_shift_list" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings2"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_shift_list"
        android:name="com.rudra.shiftmanagement.ui.fragments.ShiftListFragment"
        android:label="@string/shift_list"
        tools:layout="@layout/fragment_shift_list" >
        <action
            android:id="@+id/action_nav_shift_list_to_nav_add_edit_shift"
            app:destination="@id/nav_add_edit_shift" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_edit_shift"
        android:name="com.rudra.shiftmanagement.ui.fragments.AddEditShiftFragment"
        android:label="@string/add_edit_shift"
        tools:layout="@layout/fragment_add_edit_shift">
        <argument
            android:name="shiftId"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_nav_add_edit_shift_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rudra.shiftmanagement.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.rudra.shiftmanagement.ui.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    ```

</navigation>
